--- a/css/mainC.css
+++ b/css/mainC.css
@@ -1,6 +1,46 @@
-/* base */
+/* font-family: 'Ubuntu', sans-serif;
+font-family: 'Roboto', sans-serif; */
 
+/* base */
+h1{
+  font-size: 3rem;
+  font-family: 'Ubuntu', sans-serif;
+}
+h2{
+  font-size: 2rem;
+  font-family: 'Ubuntu', serif;
+}
+h4{
+  font-size: 1.5rem;
+  font-family: 'Roboto', serif;
+  -webkit-margin-before:0.7rem;
+  -webkit-margin-after:0.7rem;
+}
+h5{
+  font-size: 1.2rem;
+  font-family: 'Roboto', serif;
+  -webkit-margin-before:0.5rem;
+  -webkit-margin-after:0.5rem;
+}
+h6{
+  font-size: 1.2rem;
+  font-family: 'Roboto', serif;
+  -webkit-margin-before:0;
+  -webkit-margin-after:0.2rem;
+}
+p{
+  font-family: 'Roboto', serif;
+  font-size: 1.2rem;
+}
 /* layout */
+/* @media only screen and (max-width: 500px){
+  .main{
+    width: 100%;
+  }
+  .footer{
+    height:30px;
+  }
+} */
 .container{
   display: flex;
   flex-wrap: wrap;
@@ -14,16 +54,17 @@
 .main{
   width: 80%;
   display: flex;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   flex-wrap: wrap;
 }
 .footer{
   width: 100%;
-  height: 30px;
+  height: 50px;
   display: flex;
   justify-content: flex-end;
 }
 /* element */
+
 .option{
   padding-left: 10%;
   padding-right: 10%;
@@ -37,16 +78,23 @@
 }
 .unit{
   width: 100%;
-  height: 300px;
+  height: 400px;
+  display: flex;
+}
+.unit-topic{
+  align-self: center;
+  padding-left: 10px;
 }
 .work{
-  border-left: 1.5px;
-  border-top: 1.5px;
+  width: 100%;
+}
+.work-style{
+  border-left-width: 1.5px;
+  border-top-width: 1.5px;
   border-top-color: black;
   border-left-color: black;
   border-top-style: solid;
   border-left-style: solid;
-  width: 100%;
 }
 .work-topic{
   display: flex;
@@ -55,7 +103,7 @@
 .work-title{
   position: relative;
   left: 5px;
-  top: -35px;
+  top: -45px;
   padding-left: 10px;
   padding-right: 10px;
   background-color: white;
@@ -64,17 +112,22 @@
   background-color: black;
   color: white;
   display: block;
-  width:100px;
-  text-align: center;
+  width:120px;
+  height: 40px;
+  text-align: right;
+  padding-right: 7px;
+  clip-path: polygon(0% 0%, 20% 100%, 100% 100%, 100% 0%);
 }
 .work-body{
   display: flex;
   justify-content: space-between;
+  padding-bottom: 30px;
 }
 .work-abstract{
-  width: 60%;
+  /* width: 60%; */
   padding-left: 15px;
   padding-right: 1%;
+  flex: 0 1 350px;
 }
 .work-img{
   width: 35%;
@@ -82,17 +135,63 @@
 }
 .work-video{
   display: flex;
-  /* background-color: black; */
   justify-content: center;
   padding-top: 15px;
-  padding-bottom: 40px;
+  padding-bottom: 50px;
 }
 .work-video > iframe{
-  width: 600px;
+  width: 100%;
   height:400px;
+  border-color: black;
 }
 .name-box{
+  padding-right: 20px;
+  color: white;
+  padding-bottom: 10px;
 }
 .footer-style{
-  
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 560px){
+  .main{
+    width: 100%;
+  }
+  .unit{
+    height: 350px;
+  }
+  .work-topic{
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .work-title{
+    width: 95%;
+  }
+  .work-year{
+    background-color: white;
+    color: black;
+    width:120px;
+    height: 40px;
+    text-align: left;
+    padding-left: 5px;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+  }
+  .work-body{
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  .work-abstract{
+    width: 98%;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+  .work-img{
+    width: 98%;
+    height: 200px;
+  }
+  .work-video > iframe{
+    width: 100%;
+    height:200px;
+    border-color: black;
+  }
 }
