1.add about. 2.fix herounit 3.other minor decorate

--- a/css/master.scss
+++ b/css/master.scss
@@ -9,6 +9,7 @@ $breakpoints:(
 }
 body{
   overflow-x: hidden;
+  font-family: 'Roboto', serif;
 }
 body, h1, h2, h3, h4, h5, h6{
   margin: 0;
@@ -117,10 +118,17 @@ a{
     align-items: center;
     text-transform: capitalize;
     font-size: 3em;
+    font-family: 'Ubuntu', sans-serif;
   }
   &__body{
     margin-right: 20vw;
     height:100%;
+  }
+  &__word{
+    color: white;
+    font-size: 1.8em;
+    line-height: 200%;
+    padding: 5% 5% 5% 5%;
   }
   &__body--work{
     height: 100%;
@@ -132,11 +140,15 @@ a{
   border-bottom-color: white;
   margin-left: 20vw;
   padding-top: 30%;
+  @include responsive(sm){
+    padding-top: 40%;
+  }
   &__title{
     color: white;
     font-weight: 500;
     font-size: 1.5em;
     text-transform: uppercase;
+    font-family: 'Ubuntu', sans-serif;
   }
   &__subtitle{
     color: white;
