--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body {
   overflow-x: hidden;
+  font-family: "Roboto", serif;
 }
 
 body, h1, h2, h3, h4, h5, h6 {
@@ -130,10 +131,17 @@ a {
   align-items: center;
   text-transform: capitalize;
   font-size: 3em;
+  font-family: "Ubuntu", sans-serif;
 }
 .section__body {
   margin-right: 20vw;
   height: 100%;
+}
+.section__word {
+  color: white;
+  font-size: 1.8em;
+  line-height: 200%;
+  padding: 5% 5% 5% 5%;
 }
 .section__body--work {
   height: 100%;
@@ -146,11 +154,17 @@ a {
   margin-left: 20vw;
   padding-top: 30%;
 }
+@media screen and (max-width: 800px) {
+  .hero-unit {
+    padding-top: 40%;
+  }
+}
 .hero-unit__title {
   color: white;
   font-weight: 500;
   font-size: 1.5em;
   text-transform: uppercase;
+  font-family: "Ubuntu", sans-serif;
 }
 .hero-unit__subtitle {
   color: white;
